make final changes to patient controller
Co-authored-by: Skylan Lew <skylanslew@gmail.com>
co-authored-by: Helen Lehrer <hlehrer@outlook.com>

--- a/DoctorsOffice/Views/Doctors/Create.cshtml
+++ b/DoctorsOffice/Views/Doctors/Create.cshtml
@@ -9,9 +9,9 @@
 
 @using (Html.BeginForm())
 {
-    @Html.Display("Doctor Name:")
+    @Html.LabelFor(model => model.DoctorName, "Doctor Name: ")
     @Html.TextBoxFor(model => model.DoctorName)
-    @Html.Display("Specialty Area:")
+    @Html.Label("Specialty Area: ")
     @Html.EditorFor(model => model.Speciality)
 
     <input type="submit" value="Add new Doctor" class="btn btn-default" />
