--- a/DoctorsOffice/Views/Home/Index.cshtml
+++ b/DoctorsOffice/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
     <div id="renderbody">
       <div class="jumbotron">
         <h1>Doctor's Office</h1>
-        <p>@Html.ActionLink("Log In", "Index", "Courses")</p>
+        <p>@Html.ActionLink("Log In", "Index", "Doctors")</p>
         <span id= "clock"></span>
       </div>
     </div>
