--- a/DoctorsOffice/Views/Shared/Header.cshtml
+++ b/DoctorsOffice/Views/Shared/Header.cshtml
@@ -1,6 +1,5 @@
 <div id="header">
-  @Html.ActionLink("All Courses", "Index", "Courses") | 
-  @Html.ActionLink("All Students", "Index", "Students") |
-  @Html.ActionLink("All Departments", "Index", "Departments") |
+  @Html.ActionLink("All Doctors", "Index", "Doctors") | 
+  @Html.ActionLink("All Patients", "Index", "Patients") |
   @Html.ActionLink("Log Out", "Index", "Home")
 </div>
